discussion-message: fixed text overflow

--- a/client/src/components/MovieSeriesPage/DiscussionComponent/DiscussionComponent.scss
+++ b/client/src/components/MovieSeriesPage/DiscussionComponent/DiscussionComponent.scss
@@ -115,7 +115,7 @@ a:focus {
 			height: auto;
 			margin-right: 10px;
 			border-radius: 50%;
-			margin: -15px -25px;
+			margin: -18px -25px;
 		}
 
 		.message-body {
@@ -123,8 +123,9 @@ a:focus {
 			box-sizing: border-box;
 			font-size: $base-font-size;
 			padding-bottom: 10px;
-			margin-left: 35px;
+			margin-left: 30px;
 			.body {
+				max-width: calc(100% - 20px);
 				white-space: normal;
 				word-break: break-all;
 			}
